[gd_scene load_steps=8 format=3 uid="uid://b04esyl8u473x"]

[ext_resource type="Script" path="res://game.gd" id="1_cebgk"]
[ext_resource type="FontFile" uid="uid://dy04l2c31hyma" path="res://art/Silkscreen-Regular.ttf" id="1_u48lr"]
[ext_resource type="Script" path="res://mark.gd" id="2_b00uh"]
[ext_resource type="Script" path="res://winner.gd" id="4_pv7p2"]

[sub_resource type="Animation" id="Animation_ni2l7"]
resource_name = "scale_pulse"
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.533333, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_epslx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5rwvu"]
_data = {
"RESET": SubResource("Animation_epslx"),
"scale_pulse": SubResource("Animation_ni2l7")
}

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cebgk")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -250.0
offset_right = 250.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
columns = 3

[node name="Mark1" type="Control" parent="Control/GridContainer" node_paths=PackedStringArray("game")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("2_b00uh")
game = NodePath("../../..")

[node name="Label" type="Label" parent="Control/GridContainer/Mark1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_u48lr")
theme_override_font_sizes/font_size = 100
text = "~"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Mark2" type="Control" parent="Control/GridContainer" node_paths=PackedStringArray("game")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("2_b00uh")
game = NodePath("../../..")

[node name="Label" type="Label" parent="Control/GridContainer/Mark2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_u48lr")
theme_override_font_sizes/font_size = 100
text = "~"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Mark3" type="Control" parent="Control/GridContainer" node_paths=PackedStringArray("game")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("2_b00uh")
game = NodePath("../../..")

[node name="Label" type="Label" parent="Control/GridContainer/Mark3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_u48lr")
theme_override_font_sizes/font_size = 100
text = "~"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Mark4" type="Control" parent="Control/GridContainer" node_paths=PackedStringArray("game")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("2_b00uh")
game = NodePath("../../..")

[node name="Label" type="Label" parent="Control/GridContainer/Mark4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_u48lr")
theme_override_font_sizes/font_size = 100
text = "~"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Mark5" type="Control" parent="Control/GridContainer" node_paths=PackedStringArray("game")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("2_b00uh")
game = NodePath("../../..")

[node name="Label" type="Label" parent="Control/GridContainer/Mark5"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_u48lr")
theme_override_font_sizes/font_size = 100
text = "~"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Mark6" type="Control" parent="Control/GridContainer" node_paths=PackedStringArray("game")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("2_b00uh")
game = NodePath("../../..")

[node name="Label" type="Label" parent="Control/GridContainer/Mark6"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_u48lr")
theme_override_font_sizes/font_size = 100
text = "~"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Mark7" type="Control" parent="Control/GridContainer" node_paths=PackedStringArray("game")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("2_b00uh")
game = NodePath("../../..")

[node name="Label" type="Label" parent="Control/GridContainer/Mark7"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_u48lr")
theme_override_font_sizes/font_size = 100
text = "~"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Mark8" type="Control" parent="Control/GridContainer" node_paths=PackedStringArray("game")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("2_b00uh")
game = NodePath("../../..")

[node name="Label" type="Label" parent="Control/GridContainer/Mark8"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_u48lr")
theme_override_font_sizes/font_size = 100
text = "~"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Mark9" type="Control" parent="Control/GridContainer" node_paths=PackedStringArray("game")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("2_b00uh")
game = NodePath("../../..")

[node name="Label" type="Label" parent="Control/GridContainer/Mark9"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_u48lr")
theme_override_font_sizes/font_size = 100
text = "~"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Winner" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -184.0
offset_top = -82.0
offset_right = 184.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(184, 81)
theme_override_colors/font_color = Color(0.99, 0.0495, 0.6765, 1)
theme_override_fonts/font = ExtResource("1_u48lr")
theme_override_font_sizes/font_size = 64
text = "YOU WON!"
script = ExtResource("4_pv7p2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Winner"]
libraries = {
"": SubResource("AnimationLibrary_5rwvu")
}

[connection signal="declare_winner" from="." to="Winner" method="_on_game_end"]
[connection signal="start_game" from="." to="Winner" method="_on_game_start"]
