[gd_scene load_steps=13 format=3 uid="uid://b04esyl8u473x"]

[ext_resource type="Script" uid="uid://btbqrdcccknp6" path="res://ui/game.gd" id="1_oghdo"]
[ext_resource type="PackedScene" uid="uid://dhig53gq04o6f" path="res://ui/bg.tscn" id="3_f5y2r"]
[ext_resource type="PackedScene" uid="uid://bsnfsnusy3s2j" path="res://ui/board/board.tscn" id="3_ombk5"]
[ext_resource type="PackedScene" uid="uid://c5x01dexo3f2f" path="res://ui/result_message.tscn" id="5_ibqo8"]
[ext_resource type="FontFile" uid="uid://dy04l2c31hyma" path="res://art/fonts/Silkscreen-Regular.ttf" id="5_vc4ud"]
[ext_resource type="StyleBox" uid="uid://u2kfkut6slb0" path="res://art/styles/button_normal.tres" id="6_a5lqr"]
[ext_resource type="StyleBox" uid="uid://c0vg1hr1pgc2r" path="res://art/styles/button_disabled.tres" id="7_mcrrr"]
[ext_resource type="StyleBox" uid="uid://inq4sf0eei6u" path="res://art/styles/button_hover.tres" id="8_jqqnv"]
[ext_resource type="PackedScene" uid="uid://bxxdx3ieo2oag" path="res://ui/game_mode_label.tscn" id="9_2a488"]
[ext_resource type="PackedScene" uid="uid://dps2mir7ylw1d" path="res://ui/screen_scaler.tscn" id="9_oxbaa"]
[ext_resource type="PackedScene" uid="uid://00niqossu4ex" path="res://ui/server_indicator.tscn" id="10_1p5xv"]
[ext_resource type="PackedScene" uid="uid://dht4r1mgp3w5t" path="res://ui/multiplayer_lobby.tscn" id="11_ombk5"]

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oghdo")

[node name="Background" parent="." instance=ExtResource("3_f5y2r")]
layout_mode = 1

[node name="Board" parent="." instance=ExtResource("3_ombk5")]
layout_mode = 1

[node name="ResultMessage" parent="." instance=ExtResource("5_ibqo8")]
visible = false
layout_mode = 1

[node name="ExitButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -86.0
offset_top = 6.0
offset_right = -7.0
offset_bottom = 37.0
grow_horizontal = 0
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_vc4ud")
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = ExtResource("6_a5lqr")
theme_override_styles/disabled_mirrored = ExtResource("7_mcrrr")
theme_override_styles/disabled = ExtResource("7_mcrrr")
theme_override_styles/hover_pressed_mirrored = ExtResource("8_jqqnv")
theme_override_styles/hover_pressed = ExtResource("8_jqqnv")
theme_override_styles/hover_mirrored = ExtResource("8_jqqnv")
theme_override_styles/hover = ExtResource("8_jqqnv")
theme_override_styles/pressed_mirrored = ExtResource("6_a5lqr")
theme_override_styles/pressed = ExtResource("6_a5lqr")
theme_override_styles/normal_mirrored = ExtResource("6_a5lqr")
theme_override_styles/normal = ExtResource("6_a5lqr")
text = "Exit"

[node name="GameMode" parent="." instance=ExtResource("9_2a488")]
layout_mode = 0
offset_left = 0.0
offset_top = 0.0
offset_right = 148.0
offset_bottom = 26.0

[node name="ScreenScaler" parent="." instance=ExtResource("9_oxbaa")]

[node name="ServerIndicator" parent="." instance=ExtResource("10_1p5xv")]
visible = true
layout_mode = 1
offset_left = -180.0
offset_top = -39.0
offset_right = 0.0
offset_bottom = 0.0

[node name="MultiplayerLobby" parent="." instance=ExtResource("11_ombk5")]
is_server_player = true
